--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <body>
 
     <header>
-        <img src="https://postimg.cc/sGKRSCsf" alt="Higor iPhones" />
+        <img src="higor.png" alt="Higor iPhones" />
     </header>
 
     <section>
