--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <body>
 
     <header>
-        <img src="higor.png" alt="Higor iPhones" />
+        <img src="higor.png" alt="Higor iPhones" style="height: 60px; filter: brightness(0) invert(1);" />
     </header>
 
     <section>
